# python-docx

./: .gitattributes  .gitignore  API_SURFACE.md  CLAUDE.md  FEATURES.md  HISTORY.rst  ISSUES_AUDIT.md  MANIFEST.in  Makefile  README.md  SECURITY.md  TODO.md  UPSTREAM_SYNC.md  memory_profile_report.json  memory_profile_report.md  pyproject.toml  requirements-docs.txt  requirements-test.txt  requirements.txt  tox.ini
.github/workflows/: agent-debug.yml  agent-develop.yml  agent-merge.yml  agent-product.yml  agent-review.yml  agent-revise.yml  agent-security.yml  agent-watchdog.yml  conformance.yml  tests.yml
audits/: DOCS_AUDIT.md  DOCS_SIBLING_AUDIT.md  FEATURES_AUDIT.md  README.md  SCALE_NOTES.md  TEST_AUDIT.md  branch-pruning-2026-05-05.md
corpus-manifests/docx/: bibliography-authoring.json
corpus-manifests/scripts/: gen_bibliography_authoring.py
docs/: conf.py  index.rst
docs/api/: accessibility.rst  bookmarks.rst  captions.rst  chart.rst  content-controls.rst  custom-properties.rst  custom-xml.rst  embedded-objects.rst  endnotes.rst  equations.rst  fields.rst  font-table.rst  footnotes.rst  form-fields.rst  glossary.rst  ink.rst  numbering.rst  permissions.rst  ruby.rst  search.rst  section.rst  settings.rst  shape.rst  signatures.rst  smart-art.rst  stable-ids.rst  statistics.rst  table.rst  text.rst  theme.rst  toc.rst  tracked-changes.rst  watermark.rst  web-settings.rst
docs/user/: accessibility.rst  api-concepts.rst  bookmarks.rst  captions.rst  charts.rst  content-controls.rst  custom-properties.rst  document-safety.rst  documents.rst  drawing.rst  endnotes.rst  equations.rst  fields.rst  footnotes.rst  form-fields.rst  glossary.rst  install.rst  mail-merge.rst  numbering.rst  permissions.rst  quickstart.rst  search.rst  sections-advanced.rst  shapes.rst  statistics.rst  styles-using.rst  tables-advanced.rst  text-advanced.rst  themes.rst  toc.rst  track-changes.rst  watermarks.rst
features/: acc-heading-structure.feature  api-docm.feature  blk-insert-at-position.feature  bmk-create-read.feature  bmk-mutate.feature  cap-caption.feature  chart-create-bar.feature  chart-create-line.feature  chart-create-pie.feature  chart-read.feature  cmt-mutations.feature  doc-add-page-break.feature  doc-add-section.feature  doc-append-document.feature  doc-background-color.feature  doc-bibliography.feature  doc-coreprops.feature  doc-customprops.feature  doc-protection.feature  doc-settings.feature  doc-stable-ids.feature  doc-statistics.feature  end-add-endnote.feature  end-mutate-endnotes.feature  end-numbering-props.feature  end-read-endnotes.feature  environment.py  equ-fraction.feature  equ-identifier.feature  equ-radical.feature  equ-subscript.feature  equ-superscript.feature  fld-complex.feature  fld-cross-ref.feature  fld-evaluate.feature  fld-simple.feature  fnt-add-footnote.feature  fnt-embed-font.feature  fnt-font-table.feature  fnt-mutate-footnotes.feature  (+73 more)
features/steps/: accessibility.py  append_document.py  bibliography.py  bookmarks.py  captions.py  chart.py  comments.py  content_controls.py  coreprops.py  custom_properties.py  document.py  endnotes.py  equations.py  fields.py  font.py  font_table.py  footnotes.py  form_fields.py  glossary.py  hdrftr.py  hyperlink.py  interop_validate.py  mail_merge.py  numbering.py  packaging.py  paragraph.py  parfmt.py  permissions.py  protection.py  search.py  section.py  settings.py  shape.py  smart_art.py  statistics.py  strict_ooxml.py  styles.py  table.py  tbl_copy_cross_doc.py  text.py  (+5 more)
scripts/: memory_profile.py  prepare_release.py  rebuild_default_template.py  w11_e_audit.py
scripts/release/: README.md  release.yml.parked
src/docx/: __init__.py  accessibility.py  alt_chunk.py  api.py  append_document.py  attachments.py  audit.py  bibliography.py  bind_tokens.py  blkcntnr.py  bookmarks.py  captions.py  chart.py  chart_inline.py  comments.py  compatibility.py  content_controls.py  contentcontrol.py  custom_properties.py  custom_xml.py  data_sources.py  dataframe.py  document.py  embedded_objects.py  endnotes.py  equations.py  exceptions.py  extended_properties.py  fields.py  font_obfuscation.py  font_table.py  footnotes.py  form_fields.py  glossary.py  html_export.py  html_import.py  ids.py  ink.py  latex_math.py  linked_content.py  (+31 more)
tests/: conftest.py  test_a11y.py  test_accessibility.py  test_alt_chunk.py  test_api.py  test_append_document.py  test_attachments.py  test_audit.py  test_bibliography.py  test_bind_tokens.py  test_blkcntnr.py  test_bookmark_integration.py  test_bookmarks.py  test_captions.py  test_chart.py  test_chart_inline.py  test_chart_replace_data.py  test_comment_ids.py  test_comments.py  test_compatibility.py  test_conformance_corpus.py  test_content_controls.py  test_contentcontrol.py  test_custom_properties.py  test_custom_xml.py  test_data_binding.py  test_dataframe.py  test_docm.py  test_document.py  test_drawing.py  test_embedded_objects.py  test_endnotes.py  test_enum.py  test_equations.py  test_exceptions.py  test_extended_properties.py  test_fields.py  test_fields_eval.py  test_flat_opc.py  test_floating_image.py  (+62 more)
tests/conformance/: conftest.py  diff.py  test_round_trip.py  test_validate.py
tests/dml/: test_color.py
tests/helpers/: __init__.py  conftest.py  download_schema.py  libreoffice.py  ref_docs.py  refcmp.py  roundtrip.py  schema.py  schema_validate.py  validate.py  xml_structure.py  xmlparse.py
tests/image/: test_bmp.py  test_emf.py  test_eps.py  test_image.py  test_jpeg.py  test_svg.py  test_tiff.py  test_webp.py  test_wmf.py
tests/kit/: test_back_matter.py  test_brand.py  test_callouts.py  test_case_study.py  test_charts.py  test_code_block.py  test_coe.py  test_contracts.py  test_diagrams.py  test_dividers.py  test_document_iter_all.py  test_exec_summary.py  test_export.py  test_front_matter.py  test_headers.py  test_invoices.py  test_layout.py  test_legal.py  test_letterhead.py  test_lint.py  test_mail_merge.py  test_markdown_section.py  test_medical.py  test_memos.py  test_patch.py  test_pr_faq.py  test_proposal.py  test_resume.py  test_runbook.py  (+7 more)
(+453 files in other folders)
