[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-docx"
authors = [{name = "Steve Canny", email = "stcanny@gmail.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "defusedxml>=0.7.0",
    "lxml>=4.9.1",
    # Shared OPC primitives (PackURI, Strict→Transitional translator,
    # ReproducibleZipWriter, content-type + relationship-type registry,
    # EMU unit classes). Not yet on PyPI; pinned to the master branch
    # until a PyPI release lands, after which this becomes
    # ``python-ooxml-opc>=0.1.0``.
    "python-ooxml-opc @ git+https://github.com/loadfix/python-ooxml-opc@master",
    # Shared xmlchemy descriptor DSL + XSD primitive simpletypes. Not
    # yet on PyPI; pinned to the master branch until a PyPI release
    # lands, after which this becomes ``python-ooxml-xmlchemy>=0.1.0``.
    "python-ooxml-xmlchemy @ git+https://github.com/loadfix/python-ooxml-xmlchemy@master",
    # Shared docProps readers/writers (CoreProperties, CustomProperties,
    # ExtendedProperties proxies plus their CT_* element classes). Not
    # yet on PyPI; pinned to the master branch until a PyPI release
    # lands, after which this becomes ``python-ooxml-docprops>=0.1.0``.
    "python-ooxml-docprops @ git+https://github.com/loadfix/python-ooxml-docprops@master",
    # Shared legacy ECMA-376 comments (WordprocessingML + PresentationML)
    # readers/writers. Not yet on PyPI; pinned to the master branch until a
    # PyPI release lands, after which this becomes
    # ``python-ooxml-comments>=0.1.0``.
    "python-ooxml-comments @ git+https://github.com/loadfix/python-ooxml-comments@master",
    # Shared DrawingML classic-chart (``c:chartSpace``) readers/writers.
    # Provides the full authoring surface (``CT_ChartSpace``, ``CT_Chart``,
    # ``CT_PlotArea``, per-kind ``CT_<Kind>Chart``, ``CT_SeriesComposite``,
    # axes, data labels, legend, etc.) that docx's chart oxml layer
    # re-exports. Not yet on PyPI; pinned to the master branch until a
    # PyPI release lands, after which this becomes
    # ``python-ooxml-chart>=0.1.0``.
    "python-ooxml-chart @ git+https://github.com/loadfix/python-ooxml-chart@master",
    "typing-extensions>=4.9.0",
]
description = "Create, read, and update Microsoft Word .docx files."
dynamic = ["version"]
keywords = ["docx", "office", "openxml", "word"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "Jinja2==2.11.3",
    "MarkupSafe==0.23",
    "Sphinx==1.8.6",
    "alabaster<0.7.14",
    "behave>=1.2.6",
    "pyparsing>=3.2.3",
    "pyright>=1.1.401",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "tox>=4.26.0",
    "twine>=6.1.0",
    "types-lxml-multi-subclass>=2025.3.30",
]

[project.optional-dependencies]
# Minimum runtime dependencies to execute the test suite. Kept narrow
# on purpose — CI and external contributors get a fast install that
# does NOT pull in Sphinx / tox / twine / ruff / pyright (those live
# under ``[dependency-groups].dev`` for uv users).
#
#   pip install -e '.[test]'
#
test = [
    "pytest>=8.4.0",
    "behave>=1.2.6",
    "pyparsing>=3.2.3",
    "types-lxml-multi-subclass>=2025.3.30",
]
# Opt-in extra for running OOXML conformance checks against the
# `loadfix/ooxml-reference-corpus` manifests. Kept out of the default
# `dev` group so `pip install -e '.[dev]'` stays fast and portable for
# external contributors (the previous host-specific `file://` path
# broke installs for anyone without that directory on disk).
#
#   pip install -e '.[conformance]'
#
conformance = [
    "ooxml-validate @ git+https://github.com/loadfix/ooxml-validate.git@master",
]
# Optional extra for reading and writing ECMA-376 Agile-Encryption
# password-protected .docx files. `python-ooxml-crypto` delegates AES
# key derivation and CFBF compound-document parsing to a shared
# library used by the sibling loadfix/python-pptx and
# loadfix/python-xlsx projects. Zero new mandatory runtime deps; only
# callers who pass ``password=`` to ``Document(...)`` or
# ``Document.save(...)`` need the extra installed.
#
#   pip install 'python-docx[encryption]'
#
encryption = [
    # python-ooxml-crypto is not yet on PyPI; pin to the GitHub master
    # branch until a PyPI release lands, after which this becomes
    # ``python-ooxml-crypto>=0.3.0``.
    "python-ooxml-crypto @ git+https://github.com/loadfix/python-ooxml-crypto@master",
]

[project.urls]
Changelog = "https://github.com/python-openxml/python-docx/blob/master/HISTORY.rst"
Documentation = "https://python-docx.readthedocs.org/en/latest/"
Homepage = "https://github.com/python-openxml/python-docx"
Repository = "https://github.com/python-openxml/python-docx"

[tool.pyright]
include = ["src/docx", "tests"]
pythonPlatform = "All"
pythonVersion = "3.9"
reportImportCycles = false
reportUnnecessaryCast = true
reportUnnecessaryTypeIgnoreComment = true
stubPath = "./typings"
typeCheckingMode = "strict"
verboseOutput = true
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
markers = [
    "libreoffice: marks tests requiring LibreOffice headless (deselect with '-m \"not libreoffice\"')",
]
filterwarnings = [
    # -- exit on any warning not explicitly ignored here --
    "error",
]
norecursedirs = [
    "doc",
    "docx",
    "*.egg-info",
    "features",
    ".git",
    "ref",
    "_scratch",
    ".tox",
]
python_files = ["test_*.py"]
python_classes = ["Test", "Describe"]
python_functions = ["it_", "its_", "they_", "and_", "but_"]

[tool.ruff]
exclude = []
line-length = 100
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "COM812",   # -- over-aggressively insists on trailing commas where not desired --
    "PT001",    # -- wants @pytest.fixture() instead of @pytest.fixture --
]
select = [
    "C4",       # -- flake8-comprehensions --
    "COM",      # -- flake8-commas --
    "E",        # -- pycodestyle errors --
    "F",        # -- pyflakes --
    "I",        # -- isort (imports) --
    "PLR0402",  # -- Name compared with itself like `foo == foo` --
    "PT",       # -- flake8-pytest-style --
    "SIM",      # -- flake8-simplify --
    "UP015",    # -- redundant `open()` mode parameter (like "r" is default) --
    "UP018",    # -- Unnecessary {literal_type} call like `str("abc")`. (rewrite as a literal) --
    "UP032",    # -- Use f-string instead of `.format()` call --
    "UP034",    # -- Avoid extraneous parentheses --
]

[tool.ruff.lint.isort]
known-first-party = ["docx"]
known-local-folder = ["helpers"]

[tool.setuptools.dynamic]
version = {attr = "docx.__version__"}

