[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-docx"
authors = [{name = "Steve Canny", email = "stcanny@gmail.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "defusedxml>=0.7.0",
    # ``lxml>=4.9.4`` closes CVE-2024-27322 (libxml2 XPath issue shipped
    # through lxml's bundled libxml2). Earlier 4.9.x releases on common
    # wheel builds carried the vulnerable libxml2; bump the floor so
    # ``pip install python-docx`` cannot land one of those versions.
    "lxml>=4.9.4",
    # Shared OPC primitives (PackURI, Strict→Transitional translator,
    # ReproducibleZipWriter, content-type + relationship-type registry,
    # EMU unit classes). Not yet on PyPI; pinned to the master branch
    # until a PyPI release lands, after which this becomes
    # ``python-ooxml-opc>=0.1.0``.
    "python-ooxml-opc @ git+https://github.com/loadfix/python-ooxml-opc@master",
    # Shared xmlchemy descriptor DSL + XSD primitive simpletypes. Not
    # yet on PyPI; pinned to the master branch until a PyPI release
    # lands, after which this becomes ``python-ooxml-xmlchemy>=0.1.0``.
    "python-ooxml-xmlchemy @ git+https://github.com/loadfix/python-ooxml-xmlchemy@master",
    # Shared docProps readers/writers (CoreProperties, CustomProperties,
    # ExtendedProperties proxies plus their CT_* element classes). Not
    # yet on PyPI; pinned to the master branch until a PyPI release
    # lands, after which this becomes ``python-ooxml-docprops>=0.1.0``.
    "python-ooxml-docprops @ git+https://github.com/loadfix/python-ooxml-docprops@master",
    # Shared legacy ECMA-376 comments (WordprocessingML + PresentationML)
    # readers/writers. Not yet on PyPI; pinned to the master branch until a
    # PyPI release lands, after which this becomes
    # ``python-ooxml-comments>=0.1.0``.
    "python-ooxml-comments @ git+https://github.com/loadfix/python-ooxml-comments@master",
    # Shared Office Math Markup Language (``m:``) readers/writers. Not
    # yet on PyPI; pinned to the master branch until a PyPI release
    # lands, after which this becomes ``python-ooxml-math>=0.4.0``.
    # Requires 0.4.0 for the deferred ``Bar`` / ``Box`` / ``BorderBox``
    # / ``Phantom`` / ``GroupChar`` / ``EqArray`` proxies surfaced by
    # ``Paragraph.math_expressions`` / ``Document.iter_math_expressions``
    # / ``Paragraph.add_math``.
    "python-ooxml-math @ git+https://github.com/loadfix/python-ooxml-math@master",
    # Shared DrawingML classic-chart (``c:chartSpace``) readers/writers.
    # Provides the full authoring surface (``CT_ChartSpace``, ``CT_Chart``,
    # ``CT_PlotArea``, per-kind ``CT_<Kind>Chart``, ``CT_SeriesComposite``,
    # axes, data labels, legend, etc.) that docx's chart oxml layer
    # re-exports. Requires 0.3.0 for the ChartEx (``cx:``) Office 2016+
    # surface — treemap / sunburst / funnel / waterfall / histogram /
    # Pareto / box-and-whisker / regionMap — re-exported under
    # ``docx.oxml.chartex``. Not yet on PyPI; pinned to the master
    # branch until a PyPI release lands, after which this becomes
    # ``python-ooxml-chart>=0.3.0``.
    "python-ooxml-chart @ git+https://github.com/loadfix/python-ooxml-chart@master",
    # Shared SmartArt (DrawingML diagrams — ``dgm:``) readers/writers.
    # 0.2.0 extends the 0.1.0 family-A + family-B surface to cover
    # families D (``dgm:styleDef`` style-label catalogue) and E
    # (``dgm:colorsDef`` colour transforms). Families C (``dgm:layoutDef``)
    # and F (org-chart specialisation inside layoutDef) remain
    # indefinitely deferred. docx re-exports the ``CT_*`` classes from
    # their historical ``docx.oxml.smart_art`` module paths with a thin
    # docx-local subclass for ``CT_Pt`` (optional ``@modelId`` for
    # defensive reads). Not yet on PyPI; pinned to the master branch
    # until a PyPI release lands, after which this becomes
    # ``python-ooxml-smartart>=0.2.0``.
    "python-ooxml-smartart @ git+https://github.com/loadfix/python-ooxml-smartart@master",
    # Shared DrawingML element classes — the ``a:`` effect list, GVML
    # shape vocabulary, gradient + pattern fill, 3D scene, the theme
    # subtree (``a:theme`` / ``a:themeElements`` / ``a:clrScheme`` /
    # ``a:fontScheme`` / ``a:fmtScheme``, 0.3.0), and the DrawingML
    # table-style subtree (``a:tblStyleLst`` + 22 descendants —
    # 9 CT_* classes, 0.4.0). docx pulls the dependency in to register
    # the shared GVML element classes on its parser; the existing
    # ``docx.oxml.shape.CT_EffectList`` / ``CT_OuterShadow`` and
    # ``docx.oxml.theme.CT_Theme`` element classes stay docx-local for
    # now — their simple-type conversions (raw ``XsdInt`` vs the shared
    # ``ST_PositiveFixedAngle`` float-degrees conversion) and read-only
    # accessor shape diverge from the shared grammar. A follow-up
    # adoption lands once the shared package widens the effect/theme
    # types to host both variants. The 0.4.0 table-style classes are
    # re-exported verbatim from ``docx.oxml.tblstyle`` with no
    # docx-specific behaviour (this is the DrawingML ``a:tblStyleLst``
    # grammar, distinct from WordprocessingML's ``w:tblStyle`` /
    # ``w:tblStylePr`` family, which docx continues to own locally).
    # Not yet on PyPI; pinned to the master branch until a PyPI
    # release lands, after which this becomes
    # ``python-ooxml-shared-drawingml>=0.4.0``.
    "python-ooxml-shared-drawingml @ git+https://github.com/loadfix/python-ooxml-shared-drawingml@master",
    "typing-extensions>=4.9.0",
]
description = "Create, read, and update Microsoft Word .docx files."
dynamic = ["version"]
keywords = ["docx", "office", "openxml", "word"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "Jinja2==2.11.3",
    "MarkupSafe==0.23",
    "Sphinx==1.8.6",
    "alabaster<0.7.14",
    "behave>=1.2.6",
    "hypothesis>=6.100.0",
    "pyparsing>=3.2.3",
    "pyright>=1.1.401",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "tox>=4.26.0",
    "twine>=6.1.0",
    "types-lxml-multi-subclass>=2025.3.30",
]

[project.optional-dependencies]
# Minimum runtime dependencies to execute the test suite. Kept narrow
# on purpose — CI and external contributors get a fast install that
# does NOT pull in Sphinx / tox / twine / ruff / pyright (those live
# under ``[dependency-groups].dev`` for uv users).
#
#   pip install -e '.[test]'
#
test = [
    "pytest>=8.4.0",
    "behave>=1.2.6",
    "hypothesis>=6.100.0",
    "pyparsing>=3.2.3",
    "types-lxml-multi-subclass>=2025.3.30",
]
# Opt-in extra for running OOXML conformance checks against the
# `loadfix/ooxml-reference-corpus` manifests. Kept out of the default
# `dev` group so `pip install -e '.[dev]'` stays fast and portable for
# external contributors (the previous host-specific `file://` path
# broke installs for anyone without that directory on disk).
#
#   pip install -e '.[conformance]'
#
conformance = [
    "ooxml-validate @ git+https://github.com/loadfix/ooxml-validate.git@master",
]
# Optional extra for reading and writing ECMA-376 Agile-Encryption
# password-protected .docx files. `python-ooxml-crypto` delegates AES
# key derivation and CFBF compound-document parsing to a shared
# library used by the sibling loadfix/python-pptx and
# loadfix/python-xlsx projects. Zero new mandatory runtime deps; only
# callers who pass ``password=`` to ``Document(...)`` or
# ``Document.save(...)`` need the extra installed.
#
#   pip install 'python-docx[encryption]'
#
encryption = [
    # python-ooxml-crypto is not yet on PyPI; pin to the GitHub master
    # branch until a PyPI release lands, after which this becomes
    # ``python-ooxml-crypto>=0.3.0``.
    "python-ooxml-crypto @ git+https://github.com/loadfix/python-ooxml-crypto@master",
]
# Opt-in extra reserving a slot for the in-tree ``docx.kit`` namespace —
# high-level authoring helpers (chapter openers, callout boxes, KPI rows,
# etc.) that compose primitive python-docx APIs into common
# document-authoring shapes. The kit currently has zero extra runtime
# dependencies; the flag exists so that future kit-only deps (e.g. a
# Markdown front-end) can be opted into without forcing them on the
# base install. Per the Wave 4 scoping decision (kit code lands as
# in-tree submodules, not as new sibling packages — see
# ``audits/`` and project memory for the rationale).
#
#   pip install -e '.[kit]'
#
kit = []

[project.urls]
Changelog = "https://github.com/python-openxml/python-docx/blob/master/HISTORY.rst"
Documentation = "https://python-docx.readthedocs.org/en/latest/"
Homepage = "https://github.com/python-openxml/python-docx"
Repository = "https://github.com/python-openxml/python-docx"

[tool.pyright]
include = ["src/docx", "tests"]
pythonPlatform = "All"
pythonVersion = "3.9"
reportImportCycles = false
reportUnnecessaryCast = true
reportUnnecessaryTypeIgnoreComment = true
stubPath = "./typings"
typeCheckingMode = "strict"
verboseOutput = true
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
markers = [
    "libreoffice: marks tests requiring LibreOffice headless (deselect with '-m \"not libreoffice\"')",
    "conformance: byte-round-trip conformance harness (deselect with '-m \"not conformance\"')",
]
filterwarnings = [
    # -- exit on any warning not explicitly ignored here --
    "error",
]
norecursedirs = [
    "doc",
    "docx",
    "*.egg-info",
    "features",
    ".git",
    "ref",
    "_scratch",
    ".tox",
    ".hypothesis",
]
python_files = ["test_*.py"]
python_classes = ["Test", "Describe"]
python_functions = ["it_", "its_", "they_", "and_", "but_"]

[tool.ruff]
exclude = []
line-length = 100
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "COM812",   # -- over-aggressively insists on trailing commas where not desired --
    "PT001",    # -- wants @pytest.fixture() instead of @pytest.fixture --
]
select = [
    "C4",       # -- flake8-comprehensions --
    "COM",      # -- flake8-commas --
    "E",        # -- pycodestyle errors --
    "F",        # -- pyflakes --
    "I",        # -- isort (imports) --
    "PLR0402",  # -- Name compared with itself like `foo == foo` --
    "PT",       # -- flake8-pytest-style --
    "SIM",      # -- flake8-simplify --
    "UP015",    # -- redundant `open()` mode parameter (like "r" is default) --
    "UP018",    # -- Unnecessary {literal_type} call like `str("abc")`. (rewrite as a literal) --
    "UP032",    # -- Use f-string instead of `.format()` call --
    "UP034",    # -- Avoid extraneous parentheses --
]

[tool.ruff.lint.isort]
known-first-party = ["docx"]
known-local-folder = ["helpers"]

[tool.setuptools.dynamic]
version = {attr = "docx.__version__"}

